提交一下，重新开始

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,6 @@
         "type_traits": "c",
         "locale.h": "c",
         "cstring": "c"
-    }
+    },
+    "makefile.configureOnOpen": true
 }
