--- a/redis.conf
+++ b/redis.conf
@@ -41,12 +41,17 @@
 # for connections from all the network interfaces available on the server.
 # It is possible to listen to just one or multiple selected interfaces using
 # the "bind" configuration directive, followed by one or more IP addresses.
+# 默认情况下，如果没有指定“bind”配置指令，Redis将监听来自服务器上所有可用网络接口的连接。
+# 使用“bind”配置指令，可以只监听一个或多个选定的接口，后面跟着一个或多个IP地址
 #
 # Examples:
 #
 # bind 192.168.1.100 10.0.0.1
 # bind 127.0.0.1 ::1
 #
+# 如果运行Redis的计算机直接暴露在绑定到所有接口是危险的，并且会将实例暴露给互联网上的每个人。
+#因此，默认情况下，我们取消注释下面的bind指令，
+#这将强制Redis只监听IPv4回看接口地址（这意味着Redis将只能接受来自运行到同一台计算机的客户端的连接）。
 # ~~~ WARNING ~~~ If the computer running Redis is directly exposed to the
 # internet, binding to all the interfaces is dangerous and will expose the
 # instance to everybody on the internet. So by default we uncomment the
@@ -60,6 +65,7 @@
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 bind 127.0.0.1
 
+# 保护模式是一层安全保护，以避免互联网上开放的Redis实例被访问和利用。
 # Protected mode is a layer of security protection, in order to avoid that
 # Redis instances left open on the internet are accessed and exploited.
 #
@@ -73,18 +79,25 @@ bind 127.0.0.1
 # IPv4 and IPv6 loopback addresses 127.0.0.1 and ::1, and from Unix domain
 # sockets.
 #
+# 缺省情况下，启用保护模式。只有当你确定你想要其他主机的客户端连接到Redis时，即使没有配置身份验证，
+# ，也没有使用“bind”指令显式列出一组特定的接口，你才应该禁用它
 # By default protected mode is enabled. You should disable it only if
 # you are sure you want clients from other hosts to connect to Redis
 # even if no authentication is configured, nor a specific set of interfaces
 # are explicitly listed using the "bind" directive.
 protected-mode yes
 
+# 在指定的端口上接受连接，默认是6379
 # Accept connections on the specified port, default is 6379 (IANA #815344).
 # If port 0 is specified Redis will not listen on a TCP socket.
 port 6369
 
+# tcp 监听 待办事项列表
 # TCP listen() backlog.
 #
+# 请注意，Linux内核将静默地将其截断为/proc/sys/net/core/somaxconn的值，
+# 因此请确保提高somaxconn和tcp_max_syn_backlog的值，以获得所需的效果
+# 在每秒请求数高的环境中，您需要高的积压，以避免缓慢的客户端连接问题
 # In high requests-per-second environments you need an high backlog in order
 # to avoid slow clients connections issues. Note that the Linux kernel
 # will silently truncate it to the value of /proc/sys/net/core/somaxconn so
@@ -101,22 +114,27 @@ tcp-backlog 511
 # unixsocket /tmp/redis.sock
 # unixsocketperm 700
 
+# 在客户端N秒空闲之后关闭连接
 # Close the connection after a client is idle for N seconds (0 to disable)
 timeout 0
 
 # TCP keepalive.
 #
+# 如果非0，使用SO_KEEPALIVE在没有通信的情况下向客户端发送TCP ack。这有两个有用的原因
 # If non-zero, use SO_KEEPALIVE to send TCP ACKs to clients in absence
 # of communication. This is useful for two reasons:
 #
-# 1) Detect dead peers.
+# 1) Detect dead peers. 检测失效对等体
 # 2) Take the connection alive from the point of view of network
-#    equipment in the middle.
-#
+#    equipment in the middle. 从中间的网络设备的角度来看，连接是活的
+# 在Linux操作系统中，指定的值（单位为秒）是发送ack的周期
+# 请注意，要关闭连接需要两倍的时间
+# 在其他内核上，周期取决于内核配置
 # On Linux, the specified value (in seconds) is the period used to send ACKs.
 # Note that to close the connection the double of the time is needed.
 # On other kernels the period depends on the kernel configuration.
 #
+# 该选项的合理值是300秒
 # A reasonable value for this option is 300 seconds, which is the new
 # Redis default starting with Redis 3.2.1.
 tcp-keepalive 300
@@ -127,6 +145,7 @@ tcp-keepalive 300
 # Note that Redis will write a pid file in /var/run/redis.pid when daemonized.
 daemonize no
 
+# 如果你从upstart或systemd运行Redis， Redis可以与你的监督树交互
 # If you run Redis from upstart or systemd, Redis can interact with your
 # supervision tree. Options:
 #   supervised no      - no supervision interaction
@@ -136,22 +155,29 @@ daemonize no
 #                        UPSTART_JOB or NOTIFY_SOCKET environment variables
 # Note: these supervision methods only signal "process is ready."
 #       They do not enable continuous liveness pings back to your supervisor.
+# 这些监督方法只表示“进程准备好了”。它们不能持续地向你的主管发送动态信息
 supervised no
 
 # If a pid file is specified, Redis writes it where specified at startup
 # and removes it at exit.
+# 如果一个pid文件被指定，Redis启动的时候会写他，退出的时候会移除。
 #
 # When the server runs non daemonized, no pid file is created if none is
 # specified in the configuration. When the server is daemonized, the pid file
 # is used even if not specified, defaulting to "/var/run/redis.pid".
+# 当服务器运行在非守护进程状态时，如果配置中没有指定pid文件，则不会创建pid文件
+# 当服务器被daemon化时，即使没有指定pid文件也会被使用，默认为“/var/run/redis.pid”。
 #
 # Creating a pid file is best effort: if Redis is not able to create it
 # nothing bad happens, the server will start and run normally.
+# 如果Redis不能创建它，也不会有什么不好的事情发生，服务器将启动并正常运行。
 pidfile /var/run/redis_6379.pid
 
 # Specify the server verbosity level.
+# 指定服务器的verbosity 级别
 # This can be one of:
 # debug (a lot of information, useful for development/testing)
+# 调试级别（大量信息，有助于开发和测试）
 # verbose (many rarely useful info, but not a mess like the debug level)
 # notice (moderately verbose, what you want in production probably)
 # warning (only very important / critical messages are logged)
@@ -172,6 +198,9 @@ logfile ""
 # Specify the syslog facility. Must be USER or between LOCAL0-LOCAL7.
 # syslog-facility local0
 
+# 指定数据库的数量
+# 默认数据库是db0，您可以使用select <dbid>在每个连接的基础上选择一个不同的数据库，
+# 其中dbid是一个介于0和 'databases'-1 之间的数字
 # Set the number of databases. The default database is DB 0, you can select
 # a different one on a per-connection basis using SELECT <dbid> where
 # dbid is a number between 0 and 'databases'-1
@@ -479,6 +508,7 @@ slave-priority 100
 #
 # requirepass foobared
 
+# 命令重命名
 # Command renaming.
 #
 # It is possible to change the name of dangerous commands in a shared
@@ -536,9 +566,16 @@ slave-priority 100
 #
 # maxmemory <bytes>
 
+# 最大内存策略： 当达到maxmemory时，Redis将如何选择删除什么。
+# 1.使用LRU算法删除带有过期集的键
+# 2.使用lru算法删除任意键
+# 3.删除随机的一个过期键
+# 4.删除随机的任意一个键
+# 5.删除最近过期时间的键
+# 6. 不过期，只在写入操作时返回一个错误
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select among five behaviors:
-#
+# 
 # volatile-lru -> remove the key with an expire set using an LRU algorithm
 # allkeys-lru -> remove any key according to the LRU algorithm
 # volatile-random -> remove a random key with an expire set
@@ -905,8 +942,10 @@ latency-monitor-threshold 0
 #  specify at least one of K or E, no events will be delivered.
 notify-keyspace-events ""
 
+###高级配置
 ############################### ADVANCED CONFIG ###############################
-
+# 当has只有少数条目时使用一个内存紧凑的数据结构， 最大条目没有给定一个阈值。
+# 这些阈值可以通过以下指令配置。
 # Hashes are encoded using a memory efficient data structure when they have a
 # small number of entries, and the biggest entry does not exceed a given
 # threshold. These thresholds can be configured using the following directives.
