--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,7 @@
 # Copyright (C) 2009 Salvatore Sanfilippo <antirez at gmail dot com>
 # This file is released under the BSD license, see the COPYING file
 #
+# Makefile使用Redis所需的内容以及传递的标准CFLAGS和LDFLAGS组成最终的FINAL_CFLAGS和FINAL_LDFLAGS
 # The Makefile composes the final FINAL_CFLAGS and FINAL_LDFLAGS using
 # what is needed for Redis plus the standard CFLAGS and LDFLAGS passed.
 # However when building the dependencies (Jemalloc, Lua, Hiredis, ...)
@@ -96,6 +97,7 @@ endif
 # Include paths to dependencies
 FINAL_CFLAGS+= -I../deps/hiredis -I../deps/linenoise -I../deps/lua/src
 
+#链接tcmalloc库
 ifeq ($(MALLOC),tcmalloc)
 	FINAL_CFLAGS+= -DUSE_TCMALLOC
 	FINAL_LIBS+= -ltcmalloc
@@ -124,6 +126,10 @@ MAKECOLOR="\033[32;1m"
 ENDCOLOR="\033[0m"
 
 ifndef V
+#$@ 是一个自动变量，它代表当前规则中的目标文件（target）
+#整行命令的效果是：在编译过程中，以蓝色打印“CC”，紧接着以黄色打印正在编译的文件名（$@的值），然后将这条信息发送到标准错误输出。
+#这样做的好处是，即使make的输出被重定向或忽略，编译信息也能以醒目的颜色显示在终端上，方便开发者快速定位。
+
 QUIET_CC = @printf '    %b %b\n' $(CCCOLOR)CC$(ENDCOLOR) $(SRCCOLOR)$@$(ENDCOLOR) 1>&2;
 QUIET_LINK = @printf '    %b %b\n' $(LINKCOLOR)LINK$(ENDCOLOR) $(BINCOLOR)$@$(ENDCOLOR) 1>&2;
 QUIET_INSTALL = @printf '    %b %b\n' $(LINKCOLOR)INSTALL$(ENDCOLOR) $(BINCOLOR)$@$(ENDCOLOR) 1>&2;
@@ -149,6 +155,7 @@ all: $(REDIS_SERVER_NAME) $(REDIS_SENTINEL_NAME) $(REDIS_CLI_NAME) $(REDIS_BENCH
 
 .PHONY: all
 
+# 使用make dep来生成
 # Deps (use make dep to generate this)
 include Makefile.dep
 
@@ -158,6 +165,9 @@ dep:
 .PHONY: dep
 
 #$(MAKE) 在 Makefile 中表示 make 程序的名称。它可以用于在 make 进程中再次调用 make，以实现递归构建。
+
+#构建依赖项目
+#echo是输出STD 到.make_settings文件中
 persist-settings: distclean
 	echo STD=$(STD) >> .make-settings
 	echo WARN=$(WARN) >> .make-settings
@@ -177,11 +187,16 @@ persist-settings: distclean
 #.PHONY : clean
 #clean:
 #    -rm main
+
+#如果在Makefile中同时存在一个名为clean的普通目标（即一个实际会生成的文件名）和一个未显式定义为伪目标的clean，
+#那么当运行make clean时，make可能会尝试去更新那个名为clean的文件，而不是执行你期望的清理命令。
 #这样显式地定义伪目标的好处有两点：
 #如果同时存在一个普通目标clean,非显示定义的伪目标将无法执行，显式定义伪目标可以解决这个问题，在出现同名普通目标时，它将覆盖普通目标得以执行，同时make将输出警告信息。
 #告诉make这就是一个伪目标，不要试图对其做其他处理，这样可以提高编译效率，减少编译时间。
 .PHONY: persist-settings
 
+# 以点开头的目标通常被用作伪目标，但这并不是强制性的。你也可以使用不以点开头的名称来定义伪目标，
+# 并通过 .PHONY 声明它们。不过，使用以点开头的名称是一种约定俗成的做法，可以帮助区分伪目标和实际文件目标。
 # Prerequisites target
 .make-prerequisites:
 	@touch $@
@@ -196,7 +211,16 @@ ifneq ($(strip $(PREV_FINAL_LDFLAGS)), $(strip $(FINAL_LDFLAGS)))
 .make-prerequisites: persist-settings
 endif
 
+#$+ 这个变量很像“$^”，也是所有依赖目标的集合。只是它不去除重复的依赖目标。
+#然而，需要注意的是，在实际使用Makefile时，$+ 这个自动变量并不常用，因为大多数情况下，我们不需要在编译命令中重复包含相同的依赖文件。
+#更常见的是使用 $，它会自动去除重复的文件名，从而避免潜在的编译问题
+
+#后缀为 .a 的文件在UNIX系统和类似UNIX系统（如Linux和macOS）中代表‌静态链接库文件‌。这种文件类型也被称为归档文件（archive file）。
+#.a 文件通常由编译器生成，并包含了一个或多个目标文件（.o 文件），这些目标文件可以被链接到其他程序中
+
 # redis-server
+# 只要.c文件被修改过（即它们比对应的.o文件新），make就会自动推导并使用gcc -c命令来重新编译这些.c文件，并生成或更新对应的.o文件。
+# 因此，‌当Makefile中的依赖为.o文件时，且这些.o文件依赖于更新的.c源文件，make会自动编译这些.c源文件以生成或更新.o文件‌‌
 $(REDIS_SERVER_NAME): $(REDIS_SERVER_OBJ)
 	$(REDIS_LD) -o $@ $^ ../deps/hiredis/libhiredis.a ../deps/lua/src/liblua.a $(REDIS_GEOHASH_OBJ) $(FINAL_LIBS)
 
@@ -220,6 +244,8 @@ $(REDIS_BENCHMARK_NAME): $(REDIS_BENCHMARK_OBJ)
 $(REDIS_CHECK_AOF_NAME): $(REDIS_CHECK_AOF_OBJ)
 	$(REDIS_LD) -o $@ $^ $(FINAL_LIBS)
 
+#$< 是一个自动变量，它代表当前规则中的第一个依赖文件名
+#$，它代表所有的依赖文件
 # Because the jemalloc.h header is generated as a part of the jemalloc build,
 # building it should complete before building any other object. Instead of
 # depending on a single artifact, build all dependencies first.
@@ -266,7 +292,7 @@ bench: $(REDIS_BENCHMARK_NAME)
 	@echo "WARNING: if it fails under Linux you probably need to install libc6-dev-i386"
 	@echo ""
 	$(MAKE) CFLAGS="-m32" LDFLAGS="-m32"
-
+#又执行了make命令
 gcov:
 	$(MAKE) REDIS_CFLAGS="-fprofile-arcs -ftest-coverage -DCOVERAGE_TEST" REDIS_LDFLAGS="-fprofile-arcs -ftest-coverage"
 
@@ -279,8 +305,11 @@ valgrind:
 src/help.h:
 	@../utils/generate-command-help.rb > help.h
 
+# 先创建/usr/local/bin目录
+#mkdir -p 是一个在类 Unix 操作系统（如 Linux 和 macOS）中使用的命令，用于创建新的目录。
+# 这个命令的 -p 选项意味着 "parents"，它会确保你想要创建的目录的完整路径被创建，即使其中的某些父目录还不存在
 install: all
-	@mkdir -p $(INSTALL_BIN)
+	@mkdir -p $(INSTALL_BIN) 
 	$(REDIS_INSTALL) $(REDIS_SERVER_NAME) $(INSTALL_BIN)
 	$(REDIS_INSTALL) $(REDIS_BENCHMARK_NAME) $(INSTALL_BIN)
 	$(REDIS_INSTALL) $(REDIS_CLI_NAME) $(INSTALL_BIN)
