继续阅读sds源码

--- a/redis.conf
+++ b/redis.conf
@@ -567,12 +567,16 @@ slave-priority 100
 # maxmemory <bytes>
 
 # 最大内存策略： 当达到maxmemory时，Redis将如何选择删除什么。
-# 1.使用LRU算法删除带有过期集的键
+# 1.使用LRU算法删除带有过期集的键 从已设置过期时间的数据集（server.db[i].expires）中挑选最近最少使用的数据淘汰
 # 2.使用lru算法删除任意键
 # 3.删除随机的一个过期键
 # 4.删除随机的任意一个键
 # 5.删除最近过期时间的键
 # 6. 不过期，只在写入操作时返回一个错误
+# 注意：任何这些策略，如果没有合适的键可以删除，Redis会在写操作时返回一个错误。
+# 当写这个注意点的时候，这些命令包含：
+
+# 默认策略是：noeviction
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select among five behaviors:
 # 
