--- a/redis.conf
+++ b/redis.conf
@@ -313,6 +313,9 @@ dir ./
 #
 slave-serve-stale-data yes
 
+
+# https://mp.weixin.qq.com/s/frLDENsPQrv5sZ2PBVzoHg
+# 你可以配置一个slave实例是否接受写入
 # You can configure a slave instance to accept writes or not. Writing against
 # a slave instance may be useful to store some ephemeral data (because data
 # written on a slave will be easily deleted after resync with the master) but
@@ -956,6 +959,14 @@ notify-keyspace-events ""
 hash-max-ziplist-entries 512
 hash-max-ziplist-value 64
 
+
+# 列表也以一种特殊的方式编码，以节省大量的空间
+# 每个内部列表节点允许的条目数可以指定为固定的最大大小或最大元素数
+# 对于固定的最大大小，使用-5到-1，表示
+
+# 正数表示每个列表节点存储的元素数量不超过这个数目
+
+# 最高性能的选项通常是-2 （8 Kb大小）或-1 （4 Kb大小），但如果您的用例是唯一的，请根据需要调整设置
 # Lists are also encoded in a special way to save a lot of space.
 # The number of entries allowed per internal list node can be specified
 # as a fixed maximum size or a maximum number of elements.
@@ -970,6 +981,10 @@ hash-max-ziplist-value 64
 # The highest performing option is usually -2 (8 Kb size) or -1 (4 Kb size),
 # but if your use case is unique, adjust the settings as necessary.
 list-max-ziplist-size -2
+
+# 当列表很长的时候，最容易被访问的很可能是两端的数据，中间的数据被访问的频率比较低（访问起来性能也很低）。如果应用场景符合这个特点，
+# 那么list还提供了一个选项，能够把中间的数据节点进行压缩，从而进一步节省内存空间。Redis的配置参数list-compress-depth就是用来完成这个设置的
+
 
 # Lists may also be compressed.
 # Compress depth is the number of quicklist ziplist nodes from *each* side of
