研究启动默认配置

--- a/redis.conf
+++ b/redis.conf
@@ -70,11 +70,13 @@ bind 127.0.0.1
 # Redis instances left open on the internet are accessed and exploited.
 #
 # When protected mode is on and if:
-#
+# 当 protected 模式启用且如果以下两个条件成立 
+
 # 1) The server is not binding explicitly to a set of addresses using the
-#    "bind" directive.
-# 2) No password is configured.
+#    "bind" directive. 服务没有通过bind指令显示绑定地址
+# 2) No password is configured. 没有配置密码
 #
+# 服务只接受127.0.0.1的链接
 # The server only accepts connections from clients connecting from the
 # IPv4 and IPv6 loopback addresses 127.0.0.1 and ::1, and from Unix domain
 # sockets.
