--- a/redis.conf
+++ b/redis.conf
@@ -136,6 +136,7 @@ timeout 0
 # Note that to close the connection the double of the time is needed.
 # On other kernels the period depends on the kernel configuration.
 #
+#  https://developer.aliyun.com/article/757742
 # 该选项的合理值是300秒
 # A reasonable value for this option is 300 seconds, which is the new
 # Redis default starting with Redis 3.2.1.
@@ -1088,6 +1089,15 @@ client-output-buffer-limit normal 0 0 0
 client-output-buffer-limit slave 256mb 64mb 60
 client-output-buffer-limit pubsub 32mb 8mb 60
 
+# Redis调用一个内部函数去执行很多后台任务，像
+# 关闭超时的客户端连接，清除从未请求过的过期键，依此类推
+
+# 不是所有的任务都以相同的频率执行，但是Redis根据指定的“hz”值检查要执行的任务
+
+# "hz"默认值被设置为10.当Redis空闲时，提高该值将使用更多的CPU，
+# 但同时也会使Redis在同时有很多键到期时响应更快，并且可以更精确地处理超时。
+# 范围在1到500之间，但是超过100的值通常不是一个好主意，
+# 大多数用户应该使用默认值10，只有在需要非常低延迟的环境中才将其提高到100
 # Redis calls an internal function to perform many background tasks, like
 # closing connections of clients in timeout, purging expired keys that are
 # never requested, and so forth.
