继续研究配置文件

--- a/redis.conf
+++ b/redis.conf
@@ -1,10 +1,15 @@
+
+# redis配置文件示例
 # Redis configuration file example.
 #
+# 注意为了读取配置文件的顺序，redis必须使用文件路径作为第一个参数
 # Note that in order to read the configuration file, Redis must be
 # started with the file path as first argument:
 #
 # ./redis-server /path/to/redis.conf
 
+# 我自己的翻译：单位上的注意点：当需要内存大小的时候，可能需要用通常的格式是1k 5GB 4M等等指定它。
+# 有道翻译：关于单元的注意事项：当需要内存大小时，可以指定为1k 5GB 4M等通常形式
 # Note on units: when memory size is needed, it is possible to specify
 # it in the usual form of 1k 5GB 4M and so forth:
 #
@@ -14,16 +19,22 @@
 # 1mb => 1024*1024 bytes
 # 1g => 1000000000 bytes
 # 1gb => 1024*1024*1024 bytes
-#
+# 单位是大小写不敏感的，所以 1GB 1Gb 1gB都是一样的。
 # units are case insensitive so 1GB 1Gb 1gB are all the same.
 
 ################################## INCLUDES ###################################
 
+# 这里包含一个或更多的配置文件。
+# 在这里包含一个或多个其他配置文件。这是有用的，
+# 如果你有一个标准的模板匹配所有的Redis服务器，但也需要自定义一些不同服务器的设置。Include文件指令可以包含其他文件，要明智地使用它
 # Include one or more other config files here.  This is useful if you
 # have a standard template that goes to all Redis servers but also need
 # to customize a few per-server settings.  Include files can include
 # other files, so use this wisely.
 #
+# 注意include指令不会被admin或Redis Sentinel的命令“CONFIG REWRITE”重写。
+# 因为Redis总是使用最新处理的行作为配置指令的值，你最好把include放在这个文件的开头，以避免在运行时覆盖配置更改。
+# 如果您对使用include来覆盖配置选项感兴趣，那么最好将include作为最后一行。
 # Notice option "include" won't be rewritten by command "CONFIG REWRITE"
 # from admin or Redis Sentinel. Since Redis always uses the last processed
 # line as value of a configuration directive, you'd better put includes
@@ -861,8 +872,12 @@ lua-time-limit 5000
 # In order to setup your cluster make sure to read the documentation
 # available at http://redis.io web site.
 
+### 慢日志
 ################################## SLOW LOG ###################################
 
+# Redis Slow Log是一个记录超过指定执行时间的查询的系统
+# 执行时间不包括I/O操作，如与客户端对话、发送回复等，
+# 而只是实际执行命令所需的时间（这是命令执行的唯一阶段，线程被阻塞，同时不能服务其他请求）。
 # The Redis Slow Log is a system to log queries that exceeded a specified
 # execution time. The execution time does not include the I/O operations
 # like talking with the client, sending the reply and so forth,
@@ -870,17 +885,23 @@ lua-time-limit 5000
 # stage of command execution where the thread is blocked and can not serve
 # other requests in the meantime).
 #
+
+# 你可以用两个参数配置慢速日志：
+# 一个参数告诉Redis执行时间（以微秒为单位），命令需要超过多长时间才能被记录，
+# 另一个参数是慢速日志的长度。记录新命令时，将从记录命令队列中删除最老的命令
 # You can configure the slow log with two parameters: one tells Redis
 # what is the execution time, in microseconds, to exceed in order for the
 # command to get logged, and the other parameter is the length of the
 # slow log. When a new command is logged the oldest one is removed from the
 # queue of logged commands.
 
+# 下面的时间以微秒表示，所以1000000相当于一秒。请注意，负数禁用慢速日志，而0的值强制记录每个命令
 # The following time is expressed in microseconds, so 1000000 is equivalent
 # to one second. Note that a negative number disables the slow log, while
 # a value of zero forces the logging of every command.
 slowlog-log-slower-than 10000
 
+# 这个长度没有限制。只是要注意它会消耗内存。您可以使用SLOWLOG RESET来回收慢日志所使用的内存。
 # There is no limit to this length. Just be aware that it will consume memory.
 # You can reclaim memory used by the slow log with SLOWLOG RESET.
 slowlog-max-len 128
