read repl config comment

--- a/redis.conf
+++ b/redis.conf
@@ -226,16 +226,21 @@ databases 16
 #
 #   save <seconds> <changes>
 #
+#   如果给定的秒数和给定的对DB的写操作数都发生了，将保存DB
 #   Will save the DB if both the given number of seconds and the given
 #   number of write operations against the DB occurred.
 #
+#   在下面的示例中，有以下三种保存行为
 #   In the example below the behaviour will be to save:
+#   15分钟以后至少有1个key变化
 #   after 900 sec (15 min) if at least 1 key changed
+#   5分钟后至少10个key变化
 #   after 300 sec (5 min) if at least 10 keys changed
+#   60秒后至少10000个key变化
 #   after 60 sec if at least 10000 keys changed
-#
+#   注意：你可以通过注释所有save行来完全禁用
 #   Note: you can disable saving completely by commenting out all "save" lines.
-#
+#   还可以通过添加带有单个空字符串参数的保存指令来删除所有先前配置的保存点，如下面的示例所示
 #   It is also possible to remove all the previously configured save
 #   points by adding a save directive with a single empty string argument
 #   like in the following example:
@@ -246,27 +251,39 @@ save 900 1
 save 300 10
 save 60 10000
 
+# 默认情况下 如果rdb镜像启用(至少一个写入点)且最新一次后台保存失败 那么 redis会停止接受写入 
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
+
+# 这个会导致 这将使用户意识到（以一种困难的方式）数据没有正确地保存在磁盘上，
+# 否则很可能没有人会注意到，并且会发生一些灾难（就是说不停止写入的话）
 # This will make the user aware (in a hard way) that data is not persisting
 # on disk properly, otherwise chances are that no one will notice and some
 # disaster will happen.
-#
+# 如果后台保存进程又开始工作了 ，那么redis会自动允许再次写入
 # If the background saving process will start working again Redis will
 # automatically allow writes again.
 #
+# 然而，如果你设置了适当的Redis服务器和持久化监控，你可能想要禁用这个功能，
+# 这样Redis即使在磁盘、权限等方面出现问题也能继续正常工作。
 # However if you have setup your proper monitoring of the Redis server
 # and persistence, you may want to disable this feature so that Redis will
 # continue to work as usual even if there are problems with disk,
 # permissions, and so forth.
 stop-writes-on-bgsave-error yes
 
+# 当dump rdb的时候使用LZF算法压缩字符串对象吗？
+# 如果你想在子进程保存的时候节省点cpu就设置为no
+# 但是如果有可压缩的值或key的话数据集会变大
 # Compress string objects using LZF when dump .rdb databases?
 # For default that's set to 'yes' as it's almost always a win.
 # If you want to save some CPU in the saving child set it to 'no' but
 # the dataset will likely be bigger if you have compressible values or keys.
 rdbcompression yes
 
+# 从rdb5开始crc64 checksum 会放在文件的最后
+# 自RDB版本5以来，CRC64校验和被放置在文件的末尾。
+# 这使得格式更能抵抗损坏，但在保存和加载RDB文件时，会有性能损失（大约10%），因此您可以禁用它以获得最大性能
 # Since version 5 of RDB a CRC64 checksum is placed at the end of the file.
 # This makes the format more resistant to corruption but there is a performance
 # hit to pay (around 10%) when saving and loading RDB files, so you can disable it
@@ -284,6 +301,7 @@ dbfilename dump.rdb
 # The DB will be written inside this directory, with the filename specified
 # above using the 'dbfilename' configuration directive.
 #
+# AOF文件也会在这个文件夹中创建
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
@@ -291,22 +309,31 @@ dir ./
 
 ################################# REPLICATION #################################
 
+# 主从复制。使用slaveof 命令 使得一个redis实例 变成另外一个redis实例的复制。
+# 关于Redis复制，有几件事需要尽快理解
 # Master-Slave replication. Use slaveof to make a Redis instance a copy of
 # another Redis server. A few things to understand ASAP about Redis replication.
 #
+# 1）redis复制是异步的，但是你可以配置一个master 如果和一些slave不连接的话就 停止接收写入
+# 但是，您可以将主服务器配置为，如果它看起来没有与至少给定数量的从服务器连接，则停止接受写操作
 # 1) Redis replication is asynchronous, but you can configure a master to
 #    stop accepting writes if it appears to be not connected with at least
 #    a given number of slaves.
+
+# 2）如果复制链路丢失相对较短的时间，Redis从端可以执行与主端的部分重同步
+#    您可能希望根据您的需要将复制积压大小（请参阅本文件的下一部分）配置为合理的值
 # 2) Redis slaves are able to perform a partial resynchronization with the
 #    master if the replication link is lost for a relatively small amount of
 #    time. You may want to configure the replication backlog size (see the next
 #    sections of this file) with a sensible value depending on your needs.
+# 3）复制是自动的，不需要用户干预。在网络分区之后，从服务器会自动尝试重新连接到主服务器，并与主服务器重新同步
 # 3) Replication is automatic and does not need user intervention. After a
 #    network partition slaves automatically try to reconnect to masters
 #    and resynchronize with them.
 #
 # slaveof <masterip> <masterport>
-
+# 如果主服务器受密码保护（使用下面的“requirepass”配置指令），
+# 则可以在启动复制同步进程之前告诉从服务器进行身份验证，否则主服务器将拒绝从服务器的请求
 # If the master is password protected (using the "requirepass" configuration
 # directive below) it is possible to tell the slave to authenticate before
 # starting the replication synchronization process, otherwise the master will
@@ -314,30 +341,39 @@ dir ./
 #
 # masterauth <master-password>
 
+# 当从服务器失去与主服务器的连接时，或者当复制仍在进行时，从服务器可以采取两种不同的方式
 # When a slave loses its connection with the master, or when the replication
 # is still in progress, the slave can act in two different ways:
 #
+# 1） 如果slave- server -stale-data设置为‘yes’（默认值），
+#    slave仍然会回复客户端请求，可能会有过期的数据，或者如果这是第一次同步，数据集可能只是空的
 # 1) if slave-serve-stale-data is set to 'yes' (the default) the slave will
 #    still reply to client requests, possibly with out of date data, or the
 #    data set may just be empty if this is the first synchronization.
-#
+#    如果slave- server -stale-data被设置为no， slave将回复除了INFO和SLAVEOF之外，
+#    所有类型的命令都出现了错误“SYNC with master in progress”
 # 2) if slave-serve-stale-data is set to 'no' the slave will reply with
 #    an error "SYNC with master in progress" to all the kind of commands
 #    but to INFO and SLAVEOF.
-#
-slave-serve-stale-data yes
+#  stale是陈旧的意思
+slave-serve-stale-data yes 
 
 
 # https://mp.weixin.qq.com/s/frLDENsPQrv5sZ2PBVzoHg
 # 你可以配置一个slave实例是否接受写入
+# 对从实例进行写操作可能有助于存储一些临时数据（因为写在从实例上的数据在与主实例重新同步后很容易被删除），
+# 但如果客户端由于配置错误而写入从实例，也可能导致问题
 # You can configure a slave instance to accept writes or not. Writing against
 # a slave instance may be useful to store some ephemeral data (because data
 # written on a slave will be easily deleted after resync with the master) but
 # may also cause problems if clients are writing to it because of a
 # misconfiguration.
-#
+# 从redis2.6版本开始salves 默认是只读的。
 # Since Redis 2.6 by default slaves are read-only.
-#
+# 
+# 只读slave不被设计为暴露给互联网上不受信任的客户端。它只是防止滥用实例的保护层。
+# 默认情况下，只读从服务器仍然输出所有管理命令，如CONFIG、DEBUG等
+# 在一定程度上，您可以使用‘rename-command’来跟踪所有管理/危险命令，从而提高只读从服务器的安全性。
 # Note: read only slaves are not designed to be exposed to untrusted clients
 # on the internet. It's just a protection layer against misuse of the instance.
 # Still a read only slave exports by default all the administrative commands
@@ -346,67 +382,85 @@ slave-serve-stale-data yes
 # administrative / dangerous commands.
 slave-read-only yes
 
+# 复制同步策略：磁盘和套接字。
 # Replication SYNC strategy: disk or socket.
-#
+# 无磁盘复制目前处于实验阶段 到redis6 这个注释才去掉
 # -------------------------------------------------------
 # WARNING: DISKLESS REPLICATION IS EXPERIMENTAL CURRENTLY
 # -------------------------------------------------------
-#
+# 如果新的从服务器和重新连接的从服务器无法继续复制过程，则需要执行所谓的“完全同步”。
+# RDB文件从主服务器传输到从服务器。传播可以通过两种不同的方式发生
 # New slaves and reconnecting slaves that are not able to continue the replication
 # process just receiving differences, need to do what is called a "full
 # synchronization". An RDB file is transmitted from the master to the slaves.
 # The transmission can happen in two different ways:
 #
+# ） 磁盘支持：Redis主服务器创建一个新进程，将RDB文件写入磁盘。随后，该文件由父进程逐步传输到从进程。
 # 1) Disk-backed: The Redis master creates a new process that writes the RDB
 #                 file on disk. Later the file is transferred by the parent
 #                 process to the slaves incrementally.
+#  2)无磁盘（Diskless）： Redis主服务器创建一个新进程，直接将RDB文件写入从服务器套接字，而不涉及磁盘。
 # 2) Diskless: The Redis master creates a new process that directly writes the
 #              RDB file to slave sockets, without touching the disk at all.
-#
+# 使用磁盘支持的复制，在生成RDB文件的同时，只要当前生成RDB文件的子进程完成其工作，就可以为更多的从进程排队并提供RDB文件。
+# 而使用无磁盘复制时，一旦传输开始，到达的新从服务器将进入队列，并且在当前传输终止时将开始新的传输
 # With disk-backed replication, while the RDB file is generated, more slaves
 # can be queued and served with the RDB file as soon as the current child producing
 # the RDB file finishes its work. With diskless replication instead once
 # the transfer starts, new slaves arriving will be queued and a new transfer
 # will start when the current one terminates.
 #
+# 当使用无磁盘复制时，主服务器在开始传输之前等待一段可配置的时间（以秒为单位），希望有多个从服务器到达，并且传输可以并行化。
 # When diskless replication is used, the master waits a configurable amount of
 # time (in seconds) before starting the transfer in the hope that multiple slaves
 # will arrive and the transfer can be parallelized.
 #
+# 对于慢速磁盘和快速（大带宽）网络，无磁盘复制效果更好
 # With slow disks and fast (large bandwidth) networks, diskless replication
 # works better.
 repl-diskless-sync no
 
+# 当启用无磁盘复制时，可以配置服务器等待的延迟，以便生成通过套接字将RDB传输到从服务器的子服务器
 # When diskless replication is enabled, it is possible to configure the delay
 # the server waits in order to spawn the child that transfers the RDB via socket
 # to the slaves.
 #
+# 这一点很重要，因为一旦传输开始，就不可能为到达的新slave提供服务，
+# 它们将排队等待下一个RDB传输，因此服务器等待延迟，以便让更多的slave到达
 # This is important since once the transfer starts, it is not possible to serve
 # new slaves arriving, that will be queued for the next RDB transfer, so the server
 # waits a delay in order to let more slaves arrive.
 #
+# 延迟时间以秒为单位，缺省值为5秒。要完全禁用它，只需将其设置为0秒，传输将尽快开始
 # The delay is specified in seconds, and by default is 5 seconds. To disable
 # it entirely just set it to 0 seconds and the transfer will start ASAP.
 repl-diskless-sync-delay 5
 
+# 从服务器以预定义的时间间隔向服务器发送ping。可以使用repl_ping_slave_period选项更改此间隔。缺省值是10秒
 # Slaves send PINGs to server in a predefined interval. It's possible to change
 # this interval with the repl_ping_slave_period option. The default value is 10
 # seconds.
 #
 # repl-ping-slave-period 10
 
+# 以下选项设置的复制超时
 # The following option sets the replication timeout for:
-#
+# 
+# 1） 从slave的角度来看，同步期间的批量传输I/O
 # 1) Bulk transfer I/O during SYNC, from the point of view of slave.
+# 2）从 slave（数据、ping）的角度来看，master超时。
 # 2) Master timeout from the point of view of slaves (data, pings).
+# 3) 从主机的角度看 slave超时 REPLCONF ACK pings
 # 3) Slave timeout from the point of view of masters (REPLCONF ACK pings).
 #
+# 重要的是要确保这个值大于为repl-ping-slave-period指定的值，
+# 否则每次主服务器和从服务器之间的流量较低时都会检测到超时
 # It is important to make sure that this value is greater than the value
 # specified for repl-ping-slave-period otherwise a timeout will be detected
 # every time there is low traffic between the master and the slave.
 #
 # repl-timeout 60
-
+# 在SYNC之后禁用TCP_NODELAY吗？
 # Disable TCP_NODELAY on the slave socket after SYNC?
 #
 # If you select "yes" Redis will use a smaller number of TCP packets and
